add pages and form for the user to add new clients and stylists.

--- a/Views/add_stylist.cshtml
+++ b/Views/add_stylist.cshtml
@@ -1,1 +1,12 @@
-
+<h1>Add a new Stylist</h1>
+<form action="/stylists" method="post">
+  <label for="stylist-name">Stylist Name</label>
+  <input id="stylist-name" name="stylist-name" type="text">
+  <label for="stylist-phone">Stylist Phone Number</label>
+  <input id="stylist-phone" name="stylist-phone" type="text">
+  <label for="stylist-email">Stylist Email Address</label>
+  <input id="stylist-email" name="stylist-email" type="text">
+  <button type="submit">Submit</button>
+</form>
+<a href="/">Go Back</a>
+<a href="/stylists">View all stylists</a>
