--- a/Views/stylist.cshtml
+++ b/Views/stylist.cshtml
@@ -14,8 +14,9 @@ else
       <li><a href="/clients/@client.GetId()">@client.GetName()</li>
     }
   </ol>
-
 }
+
+<p><a href="/stylist/edit/@Model["stylist"].GetId()">Edit this Stylist</a></p>
 
 <p><a href="/stylists">View all Stylists</a></p>
 <p><a href="/stylist/new">Add a new Stylist</a></p>
