complete pages and routes for deleting and/or clearing both stylists and clients. It will also update our README to reflect that we have not yet fixed our edit_client stylist selector bug.

--- a/Views/stylist.cshtml
+++ b/Views/stylist.cshtml
@@ -17,7 +17,7 @@ else
 }
 
 <p><a href="/stylist/edit/@Model["stylist"].GetId()">Edit this Stylist</a></p>
-
+<a href="/stylist/delete/@Model["stylist"].GetId()">Delete This Stylist</a>
 <p><a href="/stylists">View all Stylists</a></p>
 <p><a href="/stylist/new">Add a new Stylist</a></p>
 <p><a href="/">Return home</a></p>
