--- a/Views/success.cshtml
+++ b/Views/success.cshtml
@@ -1,2 +1,2 @@
-<h1>You've successfully added this person to your list!</h1>
+<h1>The requested operation was a success!</h1>
 <p><a href="/">Return Home</a></p>
