--- a/Views/client.cshtml
+++ b/Views/client.cshtml
@@ -4,6 +4,7 @@
 <h3>Stylist: @Model["stylist"].GetName()</h3>
 
 <p><a href="/client/edit/@Model["client"].GetId()">Edit this Client</a></p>
+<a href="/client/delete/@Model["client"].GetId()">Delete this client</a>
 <p><a href="/clients">View all Clients</a></p>
 <p><a href="/client/new">Add a another Client</a></p>
 <p><a href="/">Return Home</a></p>
