--- a/Views/edit_client.cshtml
+++ b/Views/edit_client.cshtml
@@ -1,21 +1,22 @@
 <h1>Edit Client</h1>
 <hr />
-<h2>Edit Client: @Model.GetName()</h2>
-<form action="/client/edit/@Model.GetId()" method="post">
+<h2>Edit Client: @Model.["client"].GetName()</h2>
+<form action="/client/edit/@Model.["client"].GetId()" method="post">
   <input type="hidden" name="_method" value="PATCH">
-  <input name="client-id" type="hidden" value="@Model.GetId()">
+  <input name="client-id" type="hidden" value="@Model.["client"].GetId()">
   <label for="client-name">Client Name</label>
   <input id="client-name" name="client-name" type="text">
   <label for="client-phone">Client Phone Number</label>
   <input id="client-phone" name="client-phone" type="text">
   <label for="client-email">Client Email Address</label>
   <input id="client-email" name="client-email" type="text">
-  @* <select name="stylist_id">
-    @foreach (var stylists in Model)
+  <label for="stylist">Stylist</label>
+  <select name="stylist_id">
+    @foreach (var stylists in @Model["stylists"])
     {
       <option value="@stylists.GetId()">@stylists.GetName()</option>
     }
-  </select> *@
+  </select>
   <button type="submit">Submit</button>
 </form>
 <h4><a href="/">Return home</a></h4>
